Fixed category selection with subcategory products to be fetched, aligned 4 products for each row in shop and added pagination in shop page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -173,7 +173,7 @@ label:hover ~ input:checked ~ label /* highlight previous selected stars */ { co
 }
 
 .grid-products .item .product-image img{
-	height: 340px !important;
+	height: 250px !important;
 }
 
 @media (min-width: 576px){
